# angel-downloader

./: .gitignore  a  angel  argparser.py  config.json  main.py  pyproject.toml  readme.md  requirements.txt
angel/: __main__.py  argparser.py
