[build-system]
requires = ["setuptools>=69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "angel"
version = "0.1.0"
requires-python = ">= 3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3"
]
readme = "readme.md"
keywords = ["angel", "xiaohongshu", "xhs", "cli"]
license = {text = "Viral Public License"}

[project.scripts]
angel = "angel:main"

[tool.setuptools.packages.find]
exclude = ["downloads"]  # empty by default

[project.urls]
Repository = "https://github.com/internetisgone/angel-downloader.git"
